# OOP_labs

./: CMakeLists.txt  README.md
course_work/: CMakeLists.txt  README.md
course_work/client/: CMakeLists.txt  app.cpp  app.hpp  client.cpp  client.hpp  controlwindow.cpp  controlwindow.hpp  interface.cpp  interface.hpp  notice.cpp  notice.hpp  paramswindow.cpp  paramswindow.hpp  statewindow.cpp  statewindow.hpp
course_work/server/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  model.cpp  model.hpp  server.cpp  server.hpp
lab_1/: CMakeLists.txt  README.md  Source.cpp  application.cpp  number.hpp  polinom.cpp  polinom.hpp
lab_2/: CMakeLists.txt  README.md  Source.cpp  application.cpp  application.hpp  console_funcs.hpp  number.hpp  polinom.cpp  polinom.hpp  rational.cpp  rational.hpp
lab_3/: CMakeLists.txt  README.md  interface.cpp  interface.hpp  main.cpp  polinom.cpp  polinom.hpp  rational.cpp  rational.hpp
lab_4/: CMakeLists.txt  README.md
lab_4/client/: CMakeLists.txt  app.cpp  app.hpp  interface.cpp  interface.hpp
lab_4/common/: communicator.cpp  communicator.hpp
lab_4/server/: CMakeLists.txt  app.cpp  app.hpp  number.hpp  rational.hpp
lab_5/: CMakeLists.txt  README.md
lab_5/client/: CMakeLists.txt  app.cpp  interface.cpp  interface.hpp  main.cpp
lab_5/common/: communicator.hpp
lab_5/server/: CMakeLists.txt  app.cpp  app.hpp  polinom.cpp  polinom.hpp  rational.cpp
lab_6/: CMakeLists.txt  README.md  graph.cpp  graph.csv  graph.hpp  graphwindow.cpp  graphwindow.hpp  interface.cpp  interface.hpp  main.cpp
lab_7/: CMakeLists.txt  README.md  app_images.qrc  graph.cpp  graph.csv  graph.hpp  graphwindow.cpp  graphwindow.hpp  interface.cpp  interface.hpp  state_graph.cpp  state_graph.hpp
